Fixed spacing for table columns, and update product sreenshot image

--- a/css/styles.css
+++ b/css/styles.css
@@ -77,11 +77,13 @@ body {
 
 th {
   /* width: 100%; */
+  padding: 3px 5px;
   text-align: left;
   border-bottom: 2px solid #ffffff83;
 }
 
 td {
+  padding: 3px 10px;
   border-bottom: 1px solid #ffffffb4;
 }
 
